# QmlQuark

./: .clang-format  CMakeLists.txt  README.md  resources.qrc
docs/: qml-control-authoring-guide.md
examples/: ControlShowcase.qml  DebugOverview.qml  DebugWindow.qml  Gallery.qml  IndustrialScrollBar_Demo.qml
examples/showcase/: FeedbackPanel.qml  InputPanel.qml  NavigationPreviewPanel.qml  SelectionPanel.qml
src/: main.cpp
src/QmlQuark/: CMakeLists.txt  qmldir  quark.qrc
src/QmlQuark/Composites/: QuarkAlertDialog.qml  QuarkCard.qml  QuarkDialog.qml  QuarkFileManager.qml  QuarkPromptDialog.qml
src/QmlQuark/Controls/: QuarkBusyIndicator.qml  QuarkButton.qml  QuarkCheckBox.qml  QuarkDropdown.qml  QuarkIcon.qml  QuarkIconButton.qml  QuarkLabel.qml  QuarkMenu.qml  QuarkMenuItem.qml  QuarkPageIndicator.qml  QuarkProgressBar.qml  QuarkRadioButton.qml  QuarkScrollBar.qml  QuarkSelectBox.qml  QuarkSlider.qml  QuarkSpinBox.qml  QuarkSwitch.qml  QuarkTabButton.qml  QuarkTextArea.qml  QuarkTextField.qml  QuarkToolBar.qml  QuarkToolTip.qml
src/QmlQuark/Theme/: Palette.qml  Typography.qml
src/QmlQuark/src/: filesystemmodel.cpp  filesystemmodel.h  mainscreen.cpp  mainscreen.h  uidevcontroller.cpp  uidevcontroller.h
